--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
 		<link rel="stylesheet" href="/style.css">
 	</head>
 	<body>
-
+        <canvas id="canvas">
+            
+        </canvas>
 
 
     </body>
 
+    <!-- <script type="module" src="/basic.js"></script> -->
     <script type="module" src="/main.js"></script>
 </html>
